--- a/index.html
+++ b/index.html
@@ -1,322 +1,264 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tinycell</title>
-  <meta name="description" content="Tinycell develops casual and puzzle mobile games." />
-
   <style>
     :root{
       --bg:#121829;
-      --card:#182038;
-      --text:#EAF0FF;
-      --muted:#A9B4D0;
-      --line:rgba(255,255,255,0.10);
-      --accent:#6EE7FF;
-      --shadow: 0 14px 40px rgba(0,0,0,0.45);
-      --radius: 18px;
-      --max: 1080px;
+      --card:#171f33;
+      --text:#e9eefc;
+      --muted:#b7c0de;
+      --line:rgba(255,255,255,.10);
+      --accent:#6ea8ff;
+      --max: 1040px;
     }
-
     *{box-sizing:border-box}
     body{
       margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      line-height:1.55;
     }
-
     a{color:inherit; text-decoration:none}
-    .wrap{max-width: var(--max); margin: 0 auto; padding: 28px 18px 60px;}
-    .top{
+    .wrap{max-width:var(--max); margin:0 auto; padding:28px 18px 60px;}
+    header{
+      padding:10px 0 26px;
+      border-bottom:1px solid var(--line);
+      margin-bottom:26px;
+    }
+    .logo{
+      width:100%;
+      max-width:520px;
+      display:block;
+      margin:0 auto 10px;
+    }
+    .brand{
+      text-align:center;
+      margin-top:8px;
+    }
+    .brand h1{
+      margin:10px 0 6px;
+      font-size:28px;
+      letter-spacing:.2px;
+    }
+    .brand p{
+      margin:0;
+      color:var(--muted);
+      font-size:14.5px;
+    }
+    section{margin-top:26px;}
+    h2{
+      margin:0 0 12px;
+      font-size:18px;
+      letter-spacing:.2px;
+    }
+    .about{
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border:1px solid var(--line);
+      border-radius:16px;
+      padding:18px 16px;
+    }
+    .about ul{
+      margin:10px 0 0;
+      padding-left:18px;
+      color:var(--muted);
+    }
+    .games{
       display:flex;
       flex-direction:column;
       gap:18px;
-      align-items:center;
-      padding: 18px 0 10px;
+      margin-top:14px;
     }
-
-    .logo{
-      width: min(560px, 92vw);
-      height: auto;
-      display:block;
-      filter: drop-shadow(0 12px 30px rgba(0,0,0,0.45));
-    }
-
-    .brand h1{
-      margin: 0;
-      font-size: clamp(26px, 4vw, 40px);
-      letter-spacing: 0.2px;
-      text-align:center;
-    }
-    .brand p{
-      margin: 6px 0 0;
-      color: var(--muted);
-      text-align:center;
-      max-width: 760px;
-    }
-
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));
-      border: 1px solid var(--line);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 22px;
-    }
-
-    .section-title{
-      margin: 34px 0 12px;
-      font-size: 18px;
-      color: var(--muted);
-      letter-spacing: 0.2px;
-    }
-
-    .about ul{
-      margin: 10px 0 0;
-      padding: 0 0 0 18px;
-      color: var(--muted);
-    }
-
-    .games{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap: 18px;
-      margin-top: 12px;
-    }
-
     .game{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap: 14px;
-      padding: 18px;
+      background:var(--card);
+      border:1px solid var(--line);
+      border-radius:16px;
+      overflow:hidden;
     }
-
+    .game .pad{
+      padding:16px 16px 12px;
+    }
     .game h3{
-      margin: 0;
-      font-size: 20px;
+      margin:0 0 8px;
+      font-size:18px;
     }
     .game p{
-      margin: 6px 0 0;
-      color: var(--muted);
+      margin:0 0 12px;
+      color:var(--muted);
+      font-size:14.5px;
     }
 
-    .thumb{
-      border-radius: 14px;
-      overflow:hidden;
-      border: 1px solid var(--line);
-      background: rgba(0,0,0,0.15);
-      transition: transform .15s ease, border-color .15s ease;
+    /* 요청: "이미지는 타이틀 아래, 가로 꽉 차게" */
+    .game a.imageLink{
+      display:block;
+      width:100%;
+      border-top:1px solid var(--line);
     }
-    .thumb:hover{
-      transform: translateY(-2px);
-      border-color: rgba(110,231,255,0.55);
-    }
-    .thumb img{
+    .game img{
       width:100%;
       height:auto;
       display:block;
     }
-
     .hint{
-      font-size: 13px;
-      color: rgba(233,240,255,0.70);
-      margin-top: 8px;
+      margin-top:10px;
+      font-size:13px;
+      color:var(--muted);
     }
 
-    .contact-grid{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap: 10px;
+    .contact{
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border:1px solid var(--line);
+      border-radius:16px;
+      padding:18px 16px;
     }
-
-    .btn-row{
+    .contactRow{
       display:flex;
       gap:10px;
       flex-wrap:wrap;
-      margin-top: 10px;
+      align-items:center;
+      margin-top:10px;
     }
-
-    .btn{
+    .pill{
       display:inline-flex;
       align-items:center;
-      justify-content:center;
-      padding: 10px 14px;
-      border-radius: 999px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,0.06);
-      color: var(--text);
-      font-weight: 600;
-      letter-spacing: 0.1px;
-      transition: transform .15s ease, border-color .15s ease;
+      gap:8px;
+      padding:10px 12px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(0,0,0,.12);
+      color:var(--text);
+      font-size:14px;
     }
-    .btn:hover{
-      transform: translateY(-1px);
-      border-color: rgba(110,231,255,0.55);
-    }
-
+    .pill strong{font-weight:600}
+    .pill:hover{border-color:rgba(255,255,255,.22)}
     .map{
-      margin-top: 12px;
-      border-radius: var(--radius);
+      margin-top:12px;
+      border-radius:16px;
       overflow:hidden;
-      border: 1px solid var(--line);
-      box-shadow: var(--shadow);
-      background: rgba(0,0,0,0.15);
+      border:1px solid var(--line);
     }
-    .map iframe{
-      width:100%;
-      height: 360px;
-      border:0;
-      display:block;
-    }
-
+    iframe{width:100%; height:360px; border:0; display:block;}
     footer{
-      margin-top: 28px;
+      margin-top:26px;
+      color:var(--muted);
+      font-size:12.5px;
       text-align:center;
-      color: rgba(233,240,255,0.55);
-      font-size: 12px;
-    }
-
-    @media (min-width: 860px){
-      .games{ grid-template-columns: 1fr; }
-      .game{
-        grid-template-columns: 1.2fr 0.8fr;
-        align-items:center;
-      }
-      .game .text{ padding-right: 12px; }
     }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-
-    <!-- TOP / LOGO -->
-    <header class="top">
-      <!-- 로고 이미지 파일: tinycell.logo.png (repo 루트에 업로드) -->
-      <img class="logo" src="tinycell.logo.png" alt="Tinycell logo" />
+    <header>
+      <!-- 로고: assets 폴더에 넣는다고 가정 -->
+      <img class="logo" src="assets/tinycell.logo.png" alt="Tinycell Logo" />
 
       <div class="brand">
         <h1>Tinycell</h1>
-        <p>
-          We develop casual and puzzle mobile games. Our team embraces AI tools to work efficiently and effectively,
-          focusing on accessible, high-quality gameplay experiences for a broad global audience.
-        </p>
+        <p>Mobile game studio focused on casual &amp; puzzle experiences.</p>
       </div>
     </header>
 
-    <!-- ABOUT -->
-    <div class="section-title">About Tinycell</div>
-    <section class="card about">
-      <ul>
-        <li>Unity &amp; Cocos-based development</li>
-        <li>Casual &amp; puzzle genres</li>
-        <li>Production pipeline ready for global release</li>
-      </ul>
+    <section>
+      <h2>About Tinycell</h2>
+      <div class="about">
+        <p>
+          Tinycell is a mobile game studio specializing in casual and puzzle titles.
+          We embrace AI tools across the team to work efficiently and deliver results faster.
+          Our focus is to provide accessible, high-quality gameplay for a broad audience.
+        </p>
+        <ul>
+          <li>Built with Unity &amp; Cocos</li>
+          <li>Casual &amp; puzzle genres</li>
+          <li>Global launch-ready pipeline</li>
+        </ul>
+      </div>
     </section>
 
-    <!-- GAMES -->
-    <div class="section-title">Games</div>
-    <section class="games">
+    <section>
+      <h2>Games</h2>
 
-      <!-- 1) SLOT LIFE -->
-      <article class="card game">
-        <div class="text">
-          <h3>SLOT LIFE : Jackpot Journey</h3>
-          <p>
-            The world's first story-driven slot game!<br/>
-            Go from a broke to a legendary casino tycoon! Travel through hotels and casinos, chase your dreams of hitting it big,
-            and grow your wealth and title through smart choices and strategy.
-          </p>
-          <div class="hint">Tip: Click the image to open Google Play.</div>
-        </div>
-
-        <a class="thumb"
-           href="https://play.google.com/store/apps/details?id=com.tinycell.slotlifejackpot&pcampaignid=web_share"
-           target="_blank" rel="noopener noreferrer"
-           aria-label="Open SLOT LIFE : Jackpot Journey on Google Play">
-          <!-- 파일명 추천: game.slotlife.png -->
-          <img src="game.slotlife.png" alt="SLOT LIFE : Jackpot Journey" />
-        </a>
-      </article>
-
-      <!-- 2) Match Cat -->
-      <article class="card game">
-        <div class="text">
-          <h3>Match Cat : Triple Matching</h3>
-          <p>
-            Welcome to Matchy Cat!<br/>
-            Relax and enjoy a cute matching puzzle game filled with adorable cat-themed items.
-            Match three of a kind, clear the board, and unlock new sets as you play!
-          </p>
-          <div class="hint">Tip: Click the image to open Google Play.</div>
-        </div>
-
-        <a class="thumb"
-           href="https://play.google.com/store/apps/details?id=com.tinycell.matchcat&pcampaignid=web_share"
-           target="_blank" rel="noopener noreferrer"
-           aria-label="Open Match Cat : Triple Matching on Google Play">
-          <!-- 파일명 추천: game.matchcat.png -->
-          <img src="game.matchcat.png" alt="Match Cat : Triple Matching" />
-        </a>
-      </article>
-
-      <!-- 3) Watermelon Maker -->
-      <article class="card game">
-        <div class="text">
-          <h3>Watermelon Maker : Fruit Merge</h3>
-          <p>
-            “Watermelon Maker” is an addictive merge puzzle game where you combine small fruits to grow bigger fruits and ultimately create sweet, juicy watermelons.
-            With simple controls, anyone can enjoy the game, yet strategic merging adds depth and challenge.
-            Cute graphics and vibrant colors make every play visually delightful, and the satisfying merging animation gives a real sense of achievement and fun.
-          </p>
-          <div class="hint">Tip: Click the image to open Google Play.</div>
-        </div>
-
-        <a class="thumb"
-           href="https://play.google.com/store/apps/details?id=com.tinycell.watermelonmaker&pcampaignid=web_share"
-           target="_blank" rel="noopener noreferrer"
-           aria-label="Open Watermelon Maker : Fruit Merge on Google Play">
-          <img src="game.watermelonmaker.png" alt="Watermelon Maker : Fruit Merge" />
-        </a>
-      </article>
-
-    </section>
-
-    <!-- CONTACT -->
-    <div class="section-title">Contact</div>
-    <section class="card">
-      <div class="contact-grid">
-        <div><strong>Email</strong>: <a class="btn" href="mailto:contact@tinycell.io">contact@tinycell.io</a></div>
-        <div><strong>Address</strong>: 510 53 Digital-ro 31-gil, Guro-gu 08375 Seoul</div>
-
-        <div class="btn-row">
-          <!-- 구글맵 새 탭 열기 -->
-          <a class="btn" target="_blank" rel="noopener noreferrer"
-             href="https://www.google.com/maps?q=510%2053%20Digital-ro%2031-gil,%20Guro-gu%2008375%20Seoul">
-            Open Map
+      <div class="games">
+        <!-- 1) SLOT LIFE -->
+        <article class="game">
+          <div class="pad">
+            <h3>SLOT LIFE : Jackpot Journey</h3>
+            <p>
+              The world's first story-driven slot game!<br/>
+              Go from a broke to a legendary casino tycoon! Travel through hotels and casinos, chase your dreams of hitting it big, and grow your wealth and title through smart choices and strategy.
+            </p>
+          </div>
+          <a class="imageLink" href="https://play.google.com/store/apps/details?id=com.tinycell.slotlifejackpot&pcampaignid=web_share" target="_blank" rel="noopener">
+            <img src="assets/game.slotlife.png" alt="SLOT LIFE : Jackpot Journey" />
           </a>
+        </article>
+
+        <!-- 2) Match Cat -->
+        <article class="game">
+          <div class="pad">
+            <h3>Match Cat : Triple Matching</h3>
+            <p>
+              Welcome to Matchy Cat!<br/>
+              Relax and enjoy a cute matching puzzle game filled with adorable cat-themed items. Match three of a kind, clear the board, and unlock new sets as you play!
+            </p>
+          </div>
+          <a class="imageLink" href="https://play.google.com/store/apps/details?id=com.tinycell.matchcat&pcampaignid=web_share" target="_blank" rel="noopener">
+            <img src="assets/game.matchcat.png" alt="Match Cat : Triple Matching" />
+          </a>
+        </article>
+
+        <!-- 3) Watermelon Maker -->
+        <article class="game">
+          <div class="pad">
+            <h3>Watermelon Maker : Fruit Merge</h3>
+            <p>
+              “Watermelon Maker” is an addictive merge puzzle game where you combine small fruits to grow bigger fruits and ultimately create sweet, juicy watermelons.
+              With simple controls, anyone can enjoy the game, yet strategic merging adds depth and challenge.
+              Cute graphics and vibrant colors make every play visually delightful, and the satisfying merging animation gives a real sense of achievement and fun.
+            </p>
+          </div>
+          <a class="imageLink" href="https://play.google.com/store/apps/details?id=com.tinycell.watermelonmaker&pcampaignid=web_share" target="_blank" rel="noopener">
+            <img src="assets/game.watermelonmaker.png" alt="Watermelon Maker : Fruit Merge" />
+          </a>
+        </article>
+      </div>
+
+      <div class="hint">
+        Tip: If any image is not showing, 99% it's a filename/path mismatch (including spaces) or the file wasn’t committed to GitHub.
+      </div>
+    </section>
+
+    <section>
+      <h2>Contact</h2>
+      <div class="contact">
+        <div class="contactRow">
+          <!-- mailto: 사용자가 버튼 누르면 메일 앱/브라우저 메일 클라이언트가 열리며 받는 사람이 자동으로 채워짐 -->
+          <a class="pill" href="mailto:contact@tinycell.io">
+            <strong>Email</strong> contact@tinycell.io
+          </a>
+
+          <span class="pill">
+            <strong>Address</strong> 510 53 Digital-ro 31-gil, Guro-gu 08375 Seoul
+          </span>
+        </div>
+
+        <!-- 지도: 주소를 정확히 q=로 박아 넣어 핀 오차를 줄임 -->
+        <div class="map">
+          <iframe
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            src="https://www.google.com/maps?q=510%2053%20Digital-ro%2031-gil,%20Guro-gu%2008375%20Seoul&output=embed">
+          </iframe>
         </div>
       </div>
     </section>
 
-    <!-- MAP EMBED -->
-    <div class="map" aria-label="Tinycell location map">
-      <iframe
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps?q=510%2053%20Digital-ro%2031-gil,%20Guro-gu%2008375%20Seoul&output=embed">
-      </iframe>
-    </div>
-
     <footer>
-      © <span id="y"></span> Tinycell. All rights reserved.
+      © Tinycell. All rights reserved.
     </footer>
   </div>
-
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
